Initial evolution simulator working

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset='utf-8'>
-
-
+    <title>Maze Evolution</title>
+    <link rel="stylesheet" href="css/maze.css">
   </head>
   <body>
     <div id="app"></div>
